# cann-pypto

./: .clang-format  .gitattributes  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTION.md  MANIFEST.in  OAT.xml  README.md  SECURITY.md  Third_Party_Open_Source_Softerware_Notice  Third_Party_Open_Source_Software_List.yaml  build_ci.py  classify_rule.yaml  conftest.py  pyproject.toml  pytest.ini  setup.py
framework/src/cann_host_runtime/: CMakeLists.txt  cann_host_runtime.cpp
framework/src/cost_model/simulation_ca/: CMakeLists.txt  PipeSimulator.cpp  PipeSimulator.h  SimulatorAdaptor.cpp  SimulatorAdaptor.h
framework/src/cost_model/simulation_ca/A2A3/: SimulatorA2A3.cpp  SimulatorA2A3.h
framework/src/cost_model/simulation_ca/mock/: mock_helper.h  mock_types.h
framework/src/interface/: CMakeLists.txt
framework/src/interface/cache/: function_cache.cpp  function_cache.h  hash.h  hash_buffer.cpp  topo_processor.h
framework/src/interface/compiler_monitor/: monitor_impl.cpp  monitor_impl.h  monitor_manager.cpp  monitor_manager.h  monitor_stage_scope.h  monitor_util.h
framework/src/interface/configs/: config_manager.cpp  config_manager.h  config_manager_ng.cpp  config_manager_ng.h  ini_parser.cpp  platform.cpp  tile_fwk_config.json  tile_fwk_config_schema.json  tile_fwk_types.json  validate.py
framework/src/interface/core/: backtrace.cpp  error.cpp
framework/src/interface/function/: function.cpp  function.h
framework/src/interface/inner/: any.h  dlpack_dtype.h  element.h  function.h  hash_buffer.h  pre_def.h  tile_shape.h  tilefwk.h
framework/src/interface/interpreter/: CMakeLists.txt  calc.cpp  calc.h  calc_api.h  calc_common.cpp  calc_cube.cpp  calc_vector.cpp  determinism.cpp  determinism.h  element.cpp  flow_verifier.cpp  flow_verifier.h  function.cpp  function.h  operation.cpp  operation.h  raw_tensor_data.cpp  raw_tensor_data.h  thread_pool.h  verify_error.h
framework/src/interface/interpreter/calculator/: CMakeLists.txt  calc_api.h  calc_error.h  calc_torch.cpp  fp8_convert.cpp  fp8_convert.h
framework/src/interface/ir/: core.cpp  expr.cpp  memref.cpp  program.cpp  stmt.cpp  type.cpp
framework/src/interface/machine/host/: host_machine.cpp  host_machine.h  machine_task.h  perf_analysis.cpp  perf_analysis.h
framework/src/interface/operation/: attr_holder.h  attribute.cpp  attribute.h  conv_operation_impl.cpp  cube_operation_impl.cpp  cycles.cpp  cycles.h  op_infer_shape_impl.cpp  op_infer_shape_impl.h  opcode.cpp  opcode.h  operation.cpp  operation.h  operation_common.cpp  operation_common.h  operation_impl.cpp  operation_impl.h  tile_shape.cpp  tile_shape_verifier.h  verifier.h
framework/src/interface/operation/distributed/: comm_group_recorder.cpp  distributed_common.h  distributed_expand.h  moe_dispatch.cpp  moe_distributed_combine.cpp  shmem_expand_function.cpp  shmem_operation_impl.cpp  symbolic_distributed.cpp
framework/src/interface/operation/vector/: binary.cpp  binary.h  bitwise_shift.cpp  compare.cpp  expand_exp_dif.cpp  hypot.cpp  indexing.cpp  math.cpp  pad.cpp  reduction.cpp  sort.cpp  tensor_transformation.cpp  tensor_transformation.h  unary.h  (+2 more)
framework/src/interface/plugin/: plugin.cpp  plugin.h
framework/src/interface/program/: program.cpp  program.h  recorder.cpp
framework/src/interface/registry/: op_registry.cpp
framework/src/interface/schema/: schema.h  schema_base.h  schema_def_attr.h  schema_def_common.h  schema_def_trace.h  schema_parser.cpp  schema_parser.h
framework/src/interface/tensor/: expected_value.cpp  float.h  hypercube_overlap_checker.h  logical_tensor.cpp  logical_tensor.h  raw_tensor.cpp  raw_tensor.h  runtime_slot.h  storage.h  symbol_handler.h  symbolic_scalar.cpp  symbolic_scalar.h  symbolic_scalar_evaluate.cpp  symbolic_scalar_evaluate.h  tensor.cpp  tensor_offset.h  tensor_slot.cpp  tensor_slot.h  tensormap.cpp  tensormap.h
framework/src/interface/tileop/: TileOpImpl.h  tileop_common.h
framework/src/interface/utils/: common.h  conv_error.h  distributed_error.h  error.cpp  error.h  file_utils.cpp  file_utils.h  function_error.h  id_gen.h  matmul_error.h  op_info_manager.cpp  op_info_manager.h  operator_tracer.cpp  operator_tracer.h  source_location.cpp  source_location.h  string_utils.h  vector_error.h
framework/src/machine/: CMakeLists.txt
framework/src/machine/cache_manager/: cache_manager.cpp  cache_manager.h
framework/src/machine/compile/: aicore_compiler.cpp  aicore_compiler.h  compile_control_bin.cpp  compile_control_bin.h  gen_aicore_code.cpp  gen_aicore_code.h
framework/src/machine/device/: CMakeLists.txt
framework/src/machine/host/: backend.cpp  backend.h  device_agent_task.cpp  expr_generator.h  main_block.cpp  main_block.h
framework/src/machine/kernel/: CMakeLists.txt
framework/src/machine/platform/: platform_manager.cpp  platform_manager.h
framework/src/machine/runtime/: CMakeLists.txt  device_error_tracking.cpp  device_error_tracking.h  device_launcher.cpp  device_launcher.h  device_launcher_binding.h  device_memory_utils.h  device_runner.cpp  device_runner.h  dump_device_perf.cpp  dump_device_perf.h  emulation_launcher.cpp  emulation_launcher.h  host_prof.cpp  host_prof.h  load_aicpu_op.cpp  load_aicpu_op.h  machine_agent.cpp  memory_pool.h  pmu_common.cpp  pmu_common.h  runtime.cpp  runtime.h
framework/src/machine/utils/: barrier.h  device_log.h  device_switch.h  machine_error.h  machine_utils.cpp  machine_utils.h  machine_ws_intf.h
framework/src/platform/: CMakeLists.txt  platform.cpp
framework/src/platform/parser/: internal_parser.cpp  internal_parser.h  platform_parser.cpp  platform_parser.h  platforminfo.ini
framework/tests/st/distributed/: CMakeLists.txt
framework/tests/st/utils/: CMakeLists.txt
framework/tests/ut/stubs/: CMakeLists.txt
python/src/: CMakeLists.txt  pybind11.cpp
python/src/bindings/: bindings.h  controller.cpp  cost_model.cpp  distributed.cpp  element.cpp  enum.cpp  function.cpp  operation.cpp  pass_config.cpp  platform.cpp  runtime.cpp  symbolic_scalar.cpp  tensor.cpp  torch_tensor_converter.cpp  torch_tensor_converter.h
(+2035 files in other folders)
